--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,9 +63,9 @@ jobs:
 #      - name: 어플리케이션 실행 테스트(테스트 코드X)
 #        run: ./gradlew clean build --exclude-task test
 
-      # build Test
-      - name: 테스트 코드 실행
-        run: ./gradlew --info test
+#      # build Test
+#      - name: 테스트 코드 실행
+#        run: ./gradlew --info test
 
       - name: 테스트 결과 PR에 코멘트 작성
         uses: EnricoMi/publish-unit-test-result-action@v2
