--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    //스웨거
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 tasks.named('bootBuildImage') {
